--- a/pagina1.html
+++ b/pagina1.html
@@ -3,72 +3,100 @@
 
 <head>
   <style>
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Roboto&display=swap');
-</style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Roboto&display=swap');
+  </style>
   <title> Tecnologia Chinesa </title>
   <link rel="stylesheet" type="text/css" href="pagina1.css">
 </head>
 
 <body>
 
+  <nav >
+
+
+    <ul id="ul1">
+
+      <li id="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li id="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">Fale Conosco</a></li>
+      <li id="li1"><a href="about.asp">Sobre nós</a></li>
+      <li id="li1"><form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get">
+        <button id="botao_fale_conosco">Fale Conosco</button>
+      </form> </li>
+    </ul>
+
+  </nav>
+
   <header>
     <h1> Portal T.I - Tecnologia Inteligente </h1>
 
 
   </header>
-  <section>
-    <img id="imagem1" src=https://miro.medium.com/max/1200/0*-mIEg3twF7JhZ-Vv.jpg alt="123" style="float:left">
 
+
+  <article id="artigo1">
+
+    <img id="imagem1" src=https://miro.medium.com/max/1200/0*-mIEg3twF7JhZ-Vv.jpg alt="123" style="float:left">
     <h2>A tecnologia chinesa em todos os lugares</h2>
-    <p>
-    Software, hardware, inteligência artificial, mobilidade e mais produtos chineses que cada vez mais fazem parte do nosso dia a dia.
-    </p>
+    <p>Software, hardware, inteligência artificial, mobilidade e mais produtos chineses que cada
+      vez mais fazem parte do nosso dia a dia.</p>
+
 
     <h2>O que tem tecnologia chinesa?</h2>
+
     <p>
       A anos não é preciso procurar por produtos feitos na china, a frase "Made in China"
-        é facilmente encontrada em diversos produtos do cotidiado brasileiro. O que antes era
-        em grande parte manufatura chinesa hoje é tecnologia desenvolvida na China.
-        A guerra pelo 5G no mundo é o ponto alto de onde a tecnologia chinesa chegou.
-        O que antes levantava preconceito sobre falta de qualidade, hoje virou um companheiro querido dos brasileiros;
-        diversas pessoas andam na rua com suas MiBand no pulso, carregam um celular da Xiaomi no bolso e usam internet 4G diretamente de uma antena da Huawei.
+      é facilmente encontrada em diversos produtos do cotidiado brasileiro. O que antes era
+      em grande parte manufatura chinesa hoje é tecnologia desenvolvida na China.
+      A guerra pelo 5G no mundo é o ponto alto de onde a tecnologia chinesa chegou.
+      O que antes levantava preconceito sobre falta de qualidade, hoje virou um companheiro querido dos brasileiros;
+      diversas pessoas andam na rua com suas MiBand no pulso, carregam um celular da Xiaomi no bolso e usam internet 4G diretamente de uma antena da Huawei.
     </p>
 
     <h2>Como a China conseguiu?</h2>
     <p>
       Desde 1978 a China vem formulando e aplicando uma série de reformas com grande impacto nas áreas tecnológicas.
-        Tendo tido por muito tempo uma industrialização centrada basicamente na imitação de tecnologias de países desenvolvidos
-        e após as dificuldades geradas na crise de 2008, o investimento em tecnologia própria foi uma resposta ao problema.
-        Desde então o investimento em tecnologia vem tendo um papel cada vez mais importante para China.<br>
-       Fonte: <a href="http://panoramainternacional.fee.tche.br/article/inovacoes-tecnologicas-na-china-licoes-e-perspectivas/">Inovações tecnológicas na China: lições e perspectivas </a>
+      Tendo tido por muito tempo uma industrialização centrada basicamente na imitação de tecnologias de países desenvolvidos
+      e após as dificuldades geradas na crise de 2008, o investimento em tecnologia própria foi uma resposta ao problema.
+      Desde então o investimento em tecnologia vem tendo um papel cada vez mais importante para China.<br>
+      Fonte: <a href="http://panoramainternacional.fee.tche.br/article/inovacoes-tecnologicas-na-china-licoes-e-perspectivas/">Inovações
+        tecnológicas na China: lições e perspectivas </a>
     </p>
 
     <h2>Empresas Chinesas de tecnologia e seus produtos</h2>
     <ul>
-      <li><u>Didi Chuxing</u> - 99app (Aplicativos de celular)</li>
-      <li><u>Alibaba Group</u> - Aliexpress (Varejo online)</li>
-      <li><u>Tencent</u> - League of Legends (Jogos eletrônicos)</li>
-      <li><u>Xiaomi</u> - Amazfit (Monitores de atividade física)</li>
+      <li>Didi Chuxing - 99app (Aplicativos de celular)</li>
+      <li>Alibaba Group - Aliexpress (Varejo online)</li>
+      <li>Tencent - League of Legends (Jogos eletrônicos)</li>
+      <li>Xiaomi - Amazfit (Monitores de atividade física)</li>
     </ul>
+  </article>
 
-    <h3>Curiosidades</h3>
-    <p>
-      Robô chinês em marte - 2021.
-    </p>
-    <iframe src="https://www.youtube.com/embed/T_Y4M8_yxqE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+  <section id="artigo2">
 
-    <h2><u>Clique na imagem</u> para ler mais sobre a disputa EUA e China pelo 5G no mundo.</h2>
-    <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina2.html">
-      <button> <img src=https://conteudo.imguol.com.br/c/esporte/d6/2019/02/28/representativa-5g-1551380293444_v2_615x300.jpg alt="1333" /> </button>
-    </form>
+    <div class="clearfix">
+      <h2>Curiosidades</h2>
+      Robô chinês em marte - 2021.<br>
+      <iframe src="https://www.youtube.com/embed/T_Y4M8_yxqE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="clearfix" id="div1">
+
+
+      <h2>Leia mais sobre a disputa EUA e China pelo 5G no mundo</h2>
+      <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina2.html">
+        <input id="botao_5g" type="image" name="imagem_5g" src=https://conteudo.imguol.com.br/c/esporte/d6/2019/02/28/representativa-5g-1551380293444_v2_615x300.jpg alt="5g no mundo">
+    </div>
 
   </section>
+
+
+
   <footer>
     <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get">
-      <button>Fale Conosco</button>
+      <button id="botao_fale_conosco">Fale Conosco</button>
     </form>
   </footer>
+
 </body>
 
 </html>
