--- a/formulario_pagina3.html
+++ b/formulario_pagina3.html
@@ -2,72 +2,74 @@
 <html>
 
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Roboto&display=swap');
+  </style>
   <title> Formulário</title>
 
+  <link rel="stylesheet" type="text/css" href="css_do_formulario.css">
 </head>
 
 <body>
 
-  <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html" method="get">
+  <nav>
+    <ul id="ul1">
+      <li class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li class="li1"><a href="#">Sobre nós</a></li>
+      <li style="background-color:#4F756F" class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">
+          <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get"></form> Fale Conosco
+        </a></li>
+    </ul>
+  </nav>
 
-    <table border="2px">
-      <tr>
-        <td>
-      <tr>
-        <th> Preencha os Dados para entrar em contato:
-        </th>
-      </tr>
+  <header>
+    <h1> Portal T.I - Tecnologia Inteligente </h1>
+  </header>
 
+  <section>
+    <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html" method="get">
+      <p class="alinhar_centro"> Preencha os Dados para entrar em contato:</p>
+      <div class="divisao_com_borda">
+        <label>Nome: </label>
+        <input type="text" placeholder="Digite seu nome" id="nome" name="nome"><br />
+        <label>E-mail: </label>
+        <input type="email" placeholder="Digite seu e-mail" id="email" name="email"><br />
 
-      <tr>
-        <td> <label>Nome: </label>
-          <input type="text" placeholder="Digite seu nome" id="nome" name="nome"><br />
-          <label>E-mail: </label>
-          <input type="email" placeholder="Digite seu e-mail" id="email" name="email"><br />
-        </td>
-      </tr>
+        <p>Selecione seu gênero<br />
+          <input type="radio" id="masculino" name="genero" value="masculino">
+          <label for="masculino">Masculino</label>
+          <input type="radio" id="feminino" name="genero" value="feminino">
+          <label for="feminino">Feminino</label>
+          <input type="radio" id="nao_bin" name="genero" value="nao_bin">
+          <label for="nao_bin">Não binário</label><br />
+          <input type="radio" id="nao_informado" name="genero" value="nao_informado">
+          <label for="nao_informado">Prefiro não informar</label><br />
+        </p>
 
-      <tr>
-        <td>
-          <p> Selecione seu gênero<br />
-            <input type="radio" id="masculino" name="genero" value="masculino">
-            <label for="masculino">Masculino</label>
-            <input type="radio" id="feminino" name="genero" value="feminino">
-            <label for="feminino">Feminino</label>
-            <input type="radio" id="nao_bin" name="genero" value="nao_bin">
-            <label for="nao_bin">Não binário</label><br />
-            <input type="radio" id="nao_informado" name="genero" value="nao_informado">
-            <label for="nao_informado">Prefiro não informar</label><br />
-          <p>
-        </td>
-      </tr>
-
-      <tr>
-        <td> <label> Qual o motivo do seu contato?</label>
-          <select name="motivo">
-            <option value="Pergunta">Pergunta</option>
-            <option value="Comentário">Comentário</option>
-            <option value="Correção">Correção</option>
-            <option value="Dica/Pedido">Dica/Pedido</option>
-          </select><br /><br />
-          <label>Qual sua mensagem?</label><br />
-          <textarea name="text_a_enviar" placeholder="Digite aqui sua mensagem..." rows="8" cols="50" required></textarea><br />
-          <input type="checkbox" name="receber_email" value="sim">
-          <label>Gostaria de receber nossos e-mails?</label>
-        </td>
-      </tr>
-      <tr>
-        <th><input type="submit" value="Enviar">
+        <label> Qual o motivo do seu contato?</label>
+        <select name="motivo">
+          <option value="Pergunta">Pergunta</option>
+          <option value="Comentário">Comentário</option>
+          <option value="Correção">Correção</option>
+          <option value="Dica/Pedido">Dica/Pedido</option>
+        </select><br />
+      </div>
+      <br>
+      <div class="divisao_com_borda">
+        <div>Qual sua mensagem?</div>
+        <textarea name="text_a_enviar" placeholder="Digite aqui sua mensagem..." rows="8" cols="50" required></textarea><br />
+        <input type="checkbox" name="receber_email" value="sim">
+        <label>Gostaria de receber nossos e-mails?</label><br />
+        <br>
+        <div>
+          <input type="submit" value="Enviar">
           <input type="reset" value="Deletar">
-        </th>
-      </tr>
-
-
-      <tr>
-        <th>Obrigado por entrar em contato</th>
-      </tr>
-    </table>
-  </form>
+        </div>
+      </div>
+      <p id="alinhar_centro">Obrigado por entrar em contato</p>
+    </form>
+  </section>
 </body>
 
 </html>
