--- a/pagina1.html
+++ b/pagina1.html
@@ -11,38 +11,27 @@
 
 <body>
 
-  <nav >
-
-
+  <nav>
     <ul id="ul1">
-
-      <li id="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
-      <li id="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">Fale Conosco</a></li>
-      <li id="li1"><a href="about.asp">Sobre nós</a></li>
-      <li id="li1"><form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get">
-        <button id="botao_fale_conosco">Fale Conosco</button>
-      </form> </li>
+      <li class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li class="li1"><a href="#">Sobre nós</a></li>
+      <li style="background-color:#4F756F" class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">
+          <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get"></form> Fale Conosco
+        </a></li>
     </ul>
-
   </nav>
 
   <header>
     <h1> Portal T.I - Tecnologia Inteligente </h1>
-
-
   </header>
 
-
   <article id="artigo1">
-
     <img id="imagem1" src=https://miro.medium.com/max/1200/0*-mIEg3twF7JhZ-Vv.jpg alt="123" style="float:left">
     <h2>A tecnologia chinesa em todos os lugares</h2>
     <p>Software, hardware, inteligência artificial, mobilidade e mais produtos chineses que cada
       vez mais fazem parte do nosso dia a dia.</p>
 
-
     <h2>O que tem tecnologia chinesa?</h2>
-
     <p>
       A anos não é preciso procurar por produtos feitos na china, a frase "Made in China"
       é facilmente encontrada em diversos produtos do cotidiado brasileiro. O que antes era
@@ -72,29 +61,23 @@
   </article>
 
   <section id="artigo2">
-
-    <div class="clearfix">
+    <article>
       <h2>Curiosidades</h2>
       Robô chinês em marte - 2021.<br>
       <iframe src="https://www.youtube.com/embed/T_Y4M8_yxqE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    </article>
 
-    <div class="clearfix" id="div1">
-
-
+    <article>
       <h2>Leia mais sobre a disputa EUA e China pelo 5G no mundo</h2>
       <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina2.html">
         <input id="botao_5g" type="image" name="imagem_5g" src=https://conteudo.imguol.com.br/c/esporte/d6/2019/02/28/representativa-5g-1551380293444_v2_615x300.jpg alt="5g no mundo">
-    </div>
-
+      </form>
+    </article>
   </section>
 
 
-
   <footer>
-    <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get">
-      <button id="botao_fale_conosco">Fale Conosco</button>
-    </form>
+
   </footer>
 
 </body>
