--- a/formulario_pagina3.html
+++ b/formulario_pagina3.html
@@ -15,10 +15,10 @@
 
   <nav>
     <ul id="ul1">
-      <li class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li class="li1"><a href="pagina1.html">Pagina Inicial</a></li>
       <li class="li1"><a href="#">Sobre nós</a></li>
-      <li style="background-color:#4F756F" class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">
-          <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get"></form> Fale Conosco
+      <li style="background-color:#4F756F" class="li1"><a href="formulario_pagina3.html">
+          <form action="formulario_pagina3.html" method="get"></form> Fale Conosco
         </a></li>
     </ul>
   </nav>
@@ -28,7 +28,7 @@
   </header>
 
   <section>
-    <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html" method="get">
+    <form action="pagina1.html" method="get">
       <p class="alinhar_centro"> Preencha os Dados para entrar em contato:</p>
       <div class="divisao_com_borda">
         <label>Nome: </label>
