--- a/pagina1.html
+++ b/pagina1.html
@@ -13,10 +13,10 @@
 
   <nav>
     <ul id="ul1">
-      <li class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li class="li1"><a href="pagina1.html">Pagina Inicial</a></li>
       <li class="li1"><a href="#">Sobre nós</a></li>
-      <li style="background-color:#4F756F" class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">
-          <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get"></form> Fale Conosco
+      <li style="background-color:#4F756F" class="li1"><a href="formulario_pagina3.html">
+          <form action="formulario_pagina3.html" method="get"></form> Fale Conosco
         </a></li>
     </ul>
   </nav>
@@ -47,7 +47,7 @@
       Tendo tido por muito tempo uma industrialização centrada basicamente na imitação de tecnologias de países desenvolvidos
       e após as dificuldades geradas na crise de 2008, o investimento em tecnologia própria foi uma resposta ao problema.
       Desde então o investimento em tecnologia vem tendo um papel cada vez mais importante para China.<br>
-      Fonte: <a href="http://panoramainternacional.fee.tche.br/article/inovacoes-tecnologicas-na-china-licoes-e-perspectivas/">Inovações
+      Fonte: <a id="tirar_decoracao" href="http://panoramainternacional.fee.tche.br/article/inovacoes-tecnologicas-na-china-licoes-e-perspectivas/">Inovações
         tecnológicas na China: lições e perspectivas </a>
     </p>
 
@@ -60,24 +60,26 @@
     </ul>
   </article>
 
-  <section id="artigo2">
-    <article>
-      <h2>Curiosidades</h2>
-      Robô chinês em marte - 2021.<br>
-      <iframe src="https://www.youtube.com/embed/T_Y4M8_yxqE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </article>
-
-    <article>
+  <article id="artigo2">
+    <div id="article_float_1">
       <h2>Leia mais sobre a disputa EUA e China pelo 5G no mundo</h2>
-      <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina2.html">
+      <form action="pagina2.html">
         <input id="botao_5g" type="image" name="imagem_5g" src=https://conteudo.imguol.com.br/c/esporte/d6/2019/02/28/representativa-5g-1551380293444_v2_615x300.jpg alt="5g no mundo">
       </form>
-    </article>
-  </section>
+    </div>
+
+    <div id="article_float_2">
+      <h3>Curiosidades</h3>
+      Robô chinês em marte - 2021.<br>
+      <iframe src="https://www.youtube.com/embed/T_Y4M8_yxqE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </article>
 
 
   <footer>
+    <div>
 
+    </div>
   </footer>
 
 </body>
