--- a/pagina2.html
+++ b/pagina2.html
@@ -15,10 +15,10 @@
 <body>
   <nav>
     <ul id="ul1">
-      <li class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/pagina1.html">Pagina Inicial</a></li>
+      <li class="li1"><a href="pagina1.html">Pagina Inicial</a></li>
       <li class="li1"><a href="#">Sobre nós</a></li>
-      <li style="background-color:#4F756F" class="li1"><a href="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html">
-          <form action="file:///C:/Users/Felipe%20Alencar/Desktop/Mack/1_semestre/fundamentos_web/trabalho2/formulario_pagina3.html" method="get"></form>
+      <li style="background-color:#4F756F" class="li1"><a href="formulario_pagina3.html">
+          <form action="formulario_pagina3.html" method="get"></form>
           Fale Conosco
         </a>
       </li>
